Update /utils, /models, /func_schemas, /routes
