# routes/authRouter.js
@@ -1,8 +1,5 @@
-
-const dotenv = require('dotenv');
-dotenv.config();
+require('dotenv').config();
 require('crypto').randomBytes(64).toString('hex')
-const jwt = require('jsonwebtoken');
 const Usermodel = require('../models/UserModel');
 const { registerSchema, loginSchema } = require('../func_schemas/validateSchemas');
 const { hashPassword } = require('../func_schemas/validateFunction');
@@ -10,8 +7,20 @@ const { validate, ValidationError } = require('express-validation');
 const passport = require('passport');
 const userInstance = new Usermodel();
 const authRouter = require('express').Router();
+const { generateAuthToken } = require("../utils/generateAuthToken");
+const { checkAuthentication } = require('../config/passportConfig');
 
 
+authRouter.get('/users', checkAuthentication,  async (req, res) => {
+    try {
+        const users = await userInstance.getAllUsers()
+
+        res.json({ users });
+
+    } catch (err) {
+        res.status(400).send(err);
+    }
+})
 //Autherization Routes
 authRouter.post('/register', validate(registerSchema), async (req, res) => {
     if (req.user) return res.status(400).json({ message: 'Please log out to create a new user.' });
@@ -30,16 +39,17 @@ authRouter.post('/register', validate(registerSchema), async (req, res) => {
     try {
         await userInstance.create(data);
         res.status(201).send('User created')
+
     } catch (err) {
         res.status(400).send(err);
     }
 
 });
 //login Route
-authRouter.post('/login', validate(loginSchema),  passport.authenticate('local', { failureFlash: true }), (req, res) => {
+authRouter.post('/login', validate(loginSchema), passport.authenticate('local', { failureFlash: true }), (req, res) => {
     const user = req.user;
-    const token = jwt.sign(user, process.env.TOKEN_SECRET,  {algorithm: 'HS256'}, { expiresIn: '1800s' })
-    res.json({ token: token , message: `${user.first_name} is logged in` });
+    const token = generateAuthToken(user, user.user_roles, { algorithm: 'HS256' }, { expiresIn: '1800s' });
+    res.json({ token, message: `${user.first_name} is logged in;  ${user.user_role} `, expires_in: '1800s' });
 
 });
 
