# swaggerLog.json
@@ -254,7 +254,7 @@
             "description": "User is logged in.",
             "content": {
               "text/plain": {
-                "example": "Token. Message: Test is logged in"
+                "example": "Token. Message: Test is logged in, customer"
               }
             }
           },
@@ -267,6 +267,71 @@
                     "value": "Email/Password is not found"
                   }
                 }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/users": {
+      "get": {
+        "summary": "Returns all users in the database.",
+        "description": "This path gets all users from the database store and returns them in order of id.",
+        "operationId": "get_users",
+        "tags": ["User"],
+        "responses": {
+          "200": {
+            "description": "All users objects returned to an array.",
+            "content": {
+              "application/json": {
+                "example": [
+                  {
+                    "id": 42,
+                    "email": "2_test_test@example.com",
+                    "password": "$*******************************************S",
+                    "first_name": "TestTestTest2",
+                    "last_name": "TestTestTest2",
+                    "address": "TEST11112, 00/11",
+                    "postcode": "11112",
+                    "city": "TEST11112",
+                    "country": "TEST11112",
+                    "date_joined": "2022-07-03T17:19:11.849Z",
+                    "active": true,
+                    "user_role": "customer",
+                    "modified": "2022-07-03T21:00:00.000Z"
+                  },
+                  {
+                    "id": 43,
+                    "email": "3_test_test@example.com",
+                    "password": "$*******************************************A",
+                    "first_name": "TestTestTest3",
+                    "last_name": "TestTestTest3",
+                    "address": "TEST11113, 00/11",
+                    "postcode": "11113",
+                    "city": "TEST11113",
+                    "country": "TEST11113",
+                    "date_joined": "2022-07-03T17:24:17.630Z",
+                    "active": true,
+                    "user_role": "customer",
+                    "modified": "2022-07-03T21:00:00.000Z"
+                  },
+                  {
+                    "id": 44,
+                    "email": "4_test_test@example.com",
+                    "password": "$*******************************************L",
+                    "first_name": "TestTestTest4",
+                    "last_name": "TestTestTest4",
+                    "address": "TEST11114, 00/11",
+                    "postcode": "11114",
+                    "city": "TEST11114",
+                    "country": "TEST11114",
+                    "date_joined": "2022-07-04T06:56:45.079Z",
+                    "active": true,
+                    "user_role": "customer",
+                    "modified": "2022-07-03T21:00:00.000Z"
+                  },
+                  "..."
+                ]
               }
             }
           }
@@ -953,7 +1018,7 @@
       }
     }
   },
-    "components": {
+  "components": {
     "schemas": {
       "Registration": {
         "type": "object",
@@ -1226,7 +1291,7 @@
                 }
               }
             }
-          }    
+          }
         }
       }
     }
